--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -136,7 +136,7 @@
                         <ul class="l-pageWallet">
                             <li class="l-pageWallet__item">
                                 <a href="javascript:;" data-focus
-                                  data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode" data-name="@BasicData.ProductName"
+                                   data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode" data-name="@BasicData.ProductName"
                                    class="o-statusBtn o-statusBtn--like" data-eh="focus-init,focus-click"
                                    data-after="關注" data-msg="加入關注|取消關注" data-ia="true" data-add="false"></a>
                             </li>
@@ -149,7 +149,9 @@
                             @if (BasicData.OnlineSubscriptionAvailability.ToBoolean())
                             {
                                 <li class="l-pageWallet__btn">
-                                    @Html.Partial("~/Views/Project/Wealth/Partial/Subscription.cshtml",Tuple.Create(InvestTypeEnum.Fund, BasicData.ProductCode))
+                                    <a href="#" data-eh="subscription-init,subscription-click"
+                                       eh-subscription-init class="o-fixedBtn" data-popup="true"
+                                       data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode">申購</a>
                                 </li>
                             }
                         </ul>
