--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Subscription.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Subscription.cshtml
@@ -7,6 +7,6 @@
     }
 }
 <a href="#" data-eh="subscription-init,subscription-click"
-   eh-subscription-init class="o-fixedBtn" data-popup="true"
+   eh-subscription-init class="o-tableBtn o-tableBtn--card@lt" data-popup="true"
    data-type="@Model.Item1" data-id="@Model.Item2">申購</a>
 
