--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -280,7 +280,7 @@
 <template id="tmplKeywordNotFound">
     <div class="c-empty">
         <div class="c-empty__img">
-            <img src="./../themes/images/lions/lion-keyword.svg" alt="">
+            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
         </div>
         <div class="c-empty__desc">哎呀！沒找到耶...<br>試試看其他關鍵字吧</div>
     </div>
@@ -328,12 +328,12 @@
             <div class="c-cardTable__content">
                 <a href="<%= DetailLink %>" class="o-contentLink t-bold u-ellipsis-2" target="_blank"><%= FullName %></a>
             </div>
-            <% if (Tags != null && Tags.length > 0) { %>
-                <% for(var i = 0; i < Tags.length; i++ ) { %>
+            <% if (HoProductTags != null && HoProductTags.length > 0) { %>
+                <% for(var i = 0; i < HoProductTags.length; i++ ) { %>
                     <div class="l-target__additional">
                         <ul class="l-tag">
                             <li class="l-tag__item">
-                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                <a href="#" class="o-tag"><%= HoProductTags[i] %></a>
                             </li>
                         </ul>
                     </div>
@@ -447,15 +447,6 @@
     </tr>
 </script>
 
-<template id="tmplKeywordNotFound">
-    <div class="c-empty">
-        <div class="c-empty__img">
-            <img src="~/themes/images/lions/lion-keyword.svg" alt="">
-        </div>
-        <div class="c-empty__desc">哎呀！沒找到耶...<br>試試看其他關鍵字吧</div>
-    </div>
-</template>
-
 <script src="~/themes/vendor/noUiSlider/nouislider.min.js"></script>
 <script src="~/themes/vendor/wnumb/wNumb.min.js"></script>
 <script src="~/themes/js/filter.min.js"></script>
@@ -538,8 +529,8 @@
                 }
             });
 
-            fjs.addCriteria({ field: 'Tags', ele: '#hotkeywordtags input:checkbox' });
-            fjs.addCriteria({ field: 'Tags', ele: '#hotproducttags input:checkbox' });
+            fjs.addCriteria({ field: 'HotKeywordTags', ele: '#hotkeywordtags input:checkbox' });
+            fjs.addCriteria({ field: 'HoProductTags', ele: '#hotproducttags input:checkbox' });
 
             fjs.bindEvent('[data-filter-reset]', 'click.reset');
             fjs.bindEvent('[data-tag-close]', 'click.tag');
