Update: Link內開外開設定

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CTA/CTA.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CTA/CTA.cshtml
@@ -27,7 +27,9 @@
                 @if (!string.IsNullOrEmpty(Model.ButtonLink) || !string.IsNullOrEmpty(Model.ButtonText))
                 {
                     <div class="c-cardLecture__action">
-                        <a href="@Model.ButtonLink" class="o-btnListen">@Model.ButtonText</a>
+                        @Html.Sitecore().BeginField(Template.CTA.Fields.ButtonLink.ToString(), Model.Item, new { haschildren = true, @class = "o-btnListen" })
+                        @Html.Sitecore().Field(Template.CTA.Fields.ButtonText.ToString(), Model.Item)
+                        @Html.Sitecore().EndField()
                     </div>
                 }
             </div>
