Update: 修正篩選、排序、搜尋功能

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/StructuredProduct/StructuredProductDetail.cshtml
@@ -39,7 +39,7 @@
                                 obj.enddate = today.toISOString().split('T')[0];
                                 break;
                             case '1m':
-                                obj.startdate = CalDateRange(1);
+                                obj.startdate = CalDateRange(3)
                                 obj.enddate = today.toISOString().split('T')[0];
                                 break;
                             case '3m':
