--- a/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Layouts/__SharedLayout.cshtml
@@ -94,10 +94,8 @@
                 </a>
             </div>
             <div class="l-header__logo">
-                <a href="/" class="o-ci">
-                    <img src="~/themes/images/layout/logo.svg" alt="第一銀行logo" class="o-ci__logo">
-                    <span class="o-ci__site">第e理財網</span>
-                </a>
+                <a href="https://www.firstbank.com.tw/" target="_blank"><img src="~/themes/images/layout/logo.svg" alt="第一銀行logo" class="o-ci__logo"></a>
+                <a href="/" class="o-ci__site">第e理財網</a>
             </div>
             <!-- #START Placeholder: navbar -->
             @Html.Sitecore().Placeholder("navbar")
