--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexBanner/IndexBanner.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexBanner/IndexBanner.cshtml
@@ -23,7 +23,9 @@
 							<div class="c-banner__actions">
 								@if (!string.IsNullOrEmpty(banner.ButtonLink) || !string.IsNullOrEmpty(banner.ButtonText))
 								{
-									<a href="@banner.ButtonLink" class="o-btn o-btn--wt o-btn--dark@dt o-btn--flat@lt" target="@banner.Target">@banner.ButtonText</a>
+									@Html.Sitecore().BeginField(Template.IndexBanner.Fields.ButtonLink.ToString(), banner.Item, new { haschildren = true, @class = "o-btn o-btn--wt o-btn--dark@dt o-btn--flat@lt" })
+									@Html.Sitecore().Field(Template.IndexBanner.Fields.ButtonText.ToString(), banner.Item)
+									@Html.Sitecore().EndField()
 								}
 							</div>
 						</div>
