--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SidebarWidget/SidebarWidget.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="c-sidebar__navs">
-    <a href="https://firstbk.tw/4s7bjv" class="c-sideBtn c-sideBtn--round">
+    <a href="https://firstbk.tw/4s7bjv" target="_blank" class="c-sideBtn c-sideBtn--round">
         <i class="c-sideBtn__icon c-sideBtn__icon--service"></i>
         <span>第e客服</span>
     </a>
